<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoriaActivity">

    <!-- Background Image -->
    <ImageView
        android:id="@+id/background_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.2"
        android:scaleType="centerCrop"
        android:src="@drawable/rounded_corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Header Section -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="391dp"
        android:layout_height="206dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="100dp" />

        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:gravity="center"
            android:text="@string/app_title"
            android:textColor="@color/primary_text_color"
            android:textSize="35dp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Body Section -->

    <!-- Bottom Navigation -->

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="410dp"
        android:layout_height="491dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintVertical_bias="1.0">

        <!-- Tipo TextView -->

        <!-- Tipo Spinner -->
        <TextView
            android:id="@+id/textTipo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tipo"
            android:textAlignment="gravity"
            android:textSize="16sp"
            android:textStyle="bold" />


        <Spinner
            android:id="@+id/spinner_tipo"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/spinner_background" />

        <TextView
            android:id="@+id/txtCantidad"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cantidadEdit"
            android:textAlignment="gravity"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_cantidad"
            android:layout_width="270dp"
            android:layout_height="34dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/rounded_corners_button"
            android:hint="@string/cantidad"
            android:padding="8dp"
            android:inputType="text"
            android:textAlignment="gravity"
            android:textColor="@color/primary_text_color" />

        <!-- Mes TextView -->
        <TextView
            android:id="@+id/txtcosto"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/costo"
            android:textAlignment="gravity"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- Mes TextView -->
        <EditText
            android:id="@+id/et_costo"
            android:layout_width="270dp"
            android:layout_height="34dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/rounded_corners_button"
            android:hint="@string/costohit"
            android:padding="8dp"
            android:inputType="numberDecimal"
            android:textAlignment="gravity"
            android:textColor="@color/primary_text_color" />

        <TextView
            android:id="@+id/txtMes"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/mes"
            android:textAlignment="gravity"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- Mes Spinner -->
        <Spinner
            android:id="@+id/spinner_mes"
            android:layout_width="270dp"
            android:layout_height="34dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/spinner_background" />

        <!-- Save Button -->
        <Button
            android:id="@+id/buttonSave"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:backgroundTint="#2F651C"
            android:text="@string/guardar" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="86dp"
        android:layout_marginBottom="4dp"
        android:background="@color/menu_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
