<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/white">
    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp">


        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"

            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/app_title"
            android:textAlignment="center"
            android:textColor="@color/primary_text_color"
            android:textSize="42sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:alpha="0.8"
        android:background="@drawable/rounded_corners"
        android:elevation="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        tools:visibility="visible">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/reg_strate"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/nombre"
            android:inputType="text"
            android:padding="12dp"
            android:textAlignment="center"
            android:textColor="@color/primary_text_color"
            android:textColorHint="@color/color_text" />

        <EditText
        android:id="@+id/editTextText4"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textAlignment="center"
        android:textColor="@color/primary_text_color"
        android:textColorHint="@color/color_text" />

        <EditText
            android:id="@+id/editTextText6"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/celular"
            android:inputType="phone"
            android:padding="12dp"
            android:textAlignment="center"
            android:textColor="@color/primary_text_color"
            android:textColorHint="@color/color_text" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/editTextText7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:hint="@string/ingresar_contrase_a"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textAlignment="center"
                android:textColor="@color/primary_text_color"
                android:textColorHint="@color/color_text" />

            <ImageButton
                android:id="@+id/visibility_button"
                android:layout_width="30dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="1dp"
                android:background="?attr/selectableItemBackground"
                android:scaleType="centerInside"
                android:src="@drawable/ic_visibility_off" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/editTextText8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:hint="@string/confirmar_contrase_a"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textAlignment="center"
                android:textColor="@color/primary_text_color"
                android:textColorHint="@color/color_text" />

            <ImageButton
                android:id="@+id/visibility_button2"
                android:layout_width="30dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="1dp"
                android:background="?attr/selectableItemBackground"
                android:scaleType="centerInside"
                android:src="@drawable/ic_visibility_off" />
        </RelativeLayout>



        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:backgroundTint="#2F651C"
            android:text="@string/btn_registrate"
            android:background="@drawable/rounded_corners_button"
            android:textAlignment="center"
            android:textAllCaps="false" />


        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:textColor="@color/color_text"
            android:textStyle="bold" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
